@@ -30,7 +30,6 @@
 //====================================================================
 @interface GSWMailDelivery : NSObject
 {
-  NSString *sender;
 };
 
 +(GSWMailDelivery*)sharedInstance;
